--- a/package.json
+++ b/package.json
@@ -4,17 +4,24 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "parcel src/index.html",
-    "start": "parcel src/index.html"
+    "start": "run-p devreact devcorsproxy",
+    "devreact": "parcel src/index.html",
+    "devcorsproxy": "node corsProxy.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/react": "^16.8.17",
+    "cors-anywhere": "^0.4.1",
+    "node-env-run": "^3.0.2",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "xml-js": "^1.6.11"
   },
   "devDependencies": {
-    "parcel-bundler": "^1.12.3"
-  }
+    "parcel-bundler": "^1.12.3",
+    "typescript": "^3.4.5"
+  },
+  "proxy": "http://localhost:5757"
 }
