al algos working need interface for 1.4 and 1.5, need pair compare variation

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cors-anywhere": "^0.4.1",
     "node-env-run": "^3.0.2",
     "react": "^16.8.6",
+    "react-collapsible": "^2.6.0",
     "react-dom": "^16.8.6",
     "xml-js": "^1.6.11"
   },
